# bio_ml_models

./: .gitignore  LICENSE  README.md  pyproject.toml
bio_ml_models/: __init__.py
bio_ml_models/base/: __init__.py  bio_model.py  bio_task.py
bio_ml_models/proteins/: __init__.py  protein_models.py  protein_tasks.py
bio_ml_models/utils/: __init__.py  model_data_download.py  path_util.py
docs/proteins/adeno_associated_virus_fitness/: aav_flip.md  adeno_associated_virus_fitness.md
docs/proteins/conservation/: conservation.md  conservation_flip.md
docs/proteins/gb1_binding/: gb1_binding.md  gb1_flip.md
docs/proteins/meltome/: meltome.md  meltome_flip.md
docs/proteins/multi_ligand_binding_site/: mlbs_flip.md  multi_ligand_binding_site.md
docs/proteins/secondary_structure/: secondary_structure.md  sst_flip.md
docs/proteins/single_amino_acid_variant_effect/: sav_flip.md  single_amino_acid_variant_effect.md
docs/proteins/sub_cellular_location/: scl_flip.md  sub_cellular_location.md
examples/: protein_example.py
scripts/: generate_docs.py  generate_zip.py
tests/: test_proteins.py
